--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "simpl-schema": "^0.3.1"
+  },
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "expect": "^1.20.2",
+    "react-addons-test-utils": "^15.6.0"
   }
 }
